# dap-prototype-common-models/src/main/java/com/example/dapprototype/model/DecisionResponse.java
@@ -9,7 +9,7 @@ import lombok.NoArgsConstructor;
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class ErrorResponse {
+public class DecisionResponse {
     private boolean success;
     private String message;
     private String code;
