# dap-prototype-common-models/src/main/java/com/example/dapprototype/model/RequestResponse.java
@@ -1,13 +1,0 @@
-package com.example.dapprototype.model;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@NoArgsConstructor
-@AllArgsConstructor
-public class RequestResponse {
-        private boolean success;
-        private String message;
-}
